--- a/tox.ini
+++ b/tox.ini
@@ -109,6 +109,18 @@ deps =
 commands =
     pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_admin_relation_tests
 
+[testenv:ha-self-healing-integration]
+description = Run high availability self healing integration tests
+deps =
+    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
+    kubernetes
+    pytest
+    pytest-operator
+    psycopg2-binary
+    -r{toxinidir}/requirements.txt
+commands =
+    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_self_healing_tests
+
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
 deps =
