--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ description = ""
 authors = []
 license = "Apache-2.0"
 readme = "README.md"
-homepage = "TODO"
-repository = "TODO"
+homepage = "https://charmhub.io/postgresql-k8s"
+repository = "https://github.com/canonical/postgresql-k8s-operator"
 
 [tool.poetry.dependencies]
 python = "^3.8.10"
@@ -45,7 +45,7 @@ pytest-asyncio = "^0.20.3"
 lightkube = "^0.12.0"
 pytest = "^7.1.1"
 pytest-operator = "^0.23.0"
-juju = "^2"
+juju = "^2" # Latest juju 2
 psycopg2-binary = "^2.9.5"
 
 [build-system]
