--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ jsonschema = "^4.17.3"
 jinja2 = "^3.1.2"
 lightkube = "^0.12.0"
 lightkube-models = "^1.26.0.4"
-requests = "^2.27.1"
+requests = "^2.28.2"
+# psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.fmt.dependencies]
 black = "^22.12.0"
@@ -46,7 +47,7 @@ lightkube = "^0.12.0"
 pytest = "^7.1.1"
 pytest-operator = "^0.23.0"
 juju = "^2" # Latest juju 2
-psycopg2-binary = "^2.9.5"
+psycopg2 = {version = "^2.9.5", extras = ["binary"]}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
