--- a/tox.ini
+++ b/tox.ini
@@ -23,134 +23,95 @@ passenv =
   CHARM_BUILD_DIR
   MODEL_SETTINGS
   PYTEST_SKIP_DEPLOY
+deps =
+    poetry
 
 [testenv:fmt]
 description = Apply coding style standards to code
-deps =
-    black
-    isort
 commands =
-    isort {[vars]all_path}
-    black {[vars]all_path}
+    poetry install --only fmt
+    poetry run isort {[vars]all_path}
+    poetry run black {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
-deps =
-    black
-    flake8==4.0.1
-    flake8-docstrings
-    flake8-copyright
-    flake8-builtins
-    pyproject-flake8
-    pep8-naming
-    isort
-    codespell
 commands =
-    codespell {toxinidir}/*.yaml {toxinidir}/*.ini {toxinidir}/*.md \
+    poetry install --only fmt,lint
+    poetry run codespell {toxinidir}/*.yaml {toxinidir}/*.ini {toxinidir}/*.md \
       {toxinidir}/*.toml {toxinidir}/*.txt {toxinidir}/.github
     # pflake8 wrapper supports config from pyproject.toml
-    pflake8 {[vars]all_path}
-    isort --check-only --diff {[vars]all_path}
-    black --check --diff {[vars]all_path}
+    poetry run pflake8 {[vars]all_path}
+    poetry run isort --check-only --diff {[vars]all_path}
+    poetry run black --check --diff {[vars]all_path}
+
 
 [testenv:unit]
 description = Run unit tests
-deps =
-    psycopg2-binary
-    pytest
-    pytest-asyncio
-    coverage[toml]
-    -r{toxinidir}/requirements.txt
 commands =
-    coverage run --source={[vars]src_path},{[vars]lib_path} \
+    poetry install --with unit
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run coverage run --source={[vars]src_path} \
         -m pytest --ignore={[vars]tst_path}integration -v --tb native -s {posargs}
-    coverage report
+    poetry run coverage report
 
 [testenv:charm-integration]
 description = Run charm integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m charm_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m charm_tests
 
 [testenv:database-relation-integration]
 description = Run database relation integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m database_relation_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m database_relation_tests
 
 [testenv:db-relation-integration]
 description = Run db relation integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_relation_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_relation_tests
 
 [testenv:db-admin-relation-integration]
 description = Run db-admin relation integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_admin_relation_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m db_admin_relation_tests
 
 [testenv:ha-self-healing-integration]
 description = Run high availability self healing integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    kubernetes
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_self_healing_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_self_healing_tests
 
 [testenv:password-rotation-integration]
 description = Run password rotation integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m password_rotation_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m password_rotation_tests
 
 [testenv:tls-integration]
 description = Run TLS integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m tls_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m tls_tests
 
 [testenv:integration]
 description = Run all integration tests
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0
+
+[testenv:poetry-lock]
+description = Install, lock and export poetry dependencies
+commands =
+    poetry lock
+    poetry export -f requirements.txt -o requirements.txt
