--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ repository = "https://github.com/canonical/postgresql-k8s-operator"
 python = "^3.8.10"
 ops = "^2.0"
 pgconnstr = "^1.0.1"
-tenacity = "^8.1.0"
-cryptography = "^39.0.0"
+tenacity = "^8.2.1"
+cryptography = "^39.0.1"
 jsonschema = "^4.17.3"
 jinja2 = "^3.1.2"
 lightkube = "^0.12.0"
@@ -29,11 +29,11 @@ black = "^22.12.0"
 isort = "^5.11.4"
 
 [tool.poetry.group.lint.dependencies]
-flake8 = "^5.0.4"
+flake8 = "^6.0.0"
 flake8-docstrings = "^1.7.0"
-flake8-copyright = "^0.2.3"
+flake8-copyright = "^0.2.4"
 flake8-builtins = "^2.1.0"
-pyproject-flake8 = "^5.0.4.post1"
+pyproject-flake8 = "^6.0.0.post1"
 pep8-naming = "^0.13.3"
 codespell = "^2.2.2"
 
@@ -48,6 +48,13 @@ pytest = "^7.1.1"
 pytest-operator = "^0.23.0"
 juju = "^2" # Latest juju 2
 psycopg2 = {version = "^2.9.5", extras = ["binary"]}
+
+[tool.poetry.group.ha_charm.dependencies]
+ops = "^2.0"
+tenacity = "^8.2.1"
+
+[tool.poetry.group.relation_charm.dependencies]
+ops = "^2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
