--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ description = Run database relation integration tests
 commands =
     poetry install --with integration
     poetry export -f requirements.txt -o requirements.txt
+    poetry export --only relation_charm -f requirements.txt -o tests/integration/new_relations/application-charm/requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m database_relation_tests
 
 [testenv:db-relation-integration]
@@ -87,6 +88,7 @@ description = Run high availability self healing integration tests
 commands =
     poetry install --with integration
     poetry export -f requirements.txt -o requirements.txt
+    poetry export --only ha_charm -f requirements.txt -o tests/integration/ha_tests/application-charm/requirements.txt
     poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m ha_self_healing_tests
 
 [testenv:password-rotation-integration]
@@ -115,3 +117,5 @@ description = Install, lock and export poetry dependencies
 commands =
     poetry lock
     poetry export -f requirements.txt -o requirements.txt
+    poetry export --only ha_charm -f requirements.txt -o tests/integration/ha_tests/application-charm/requirements.txt
+    poetry export --only relation_charm -f requirements.txt -o tests/integration/new_relations/application-charm/requirements.txt
