--- a/tox.ini
+++ b/tox.ini
@@ -61,14 +61,10 @@ passenv =
     AWS_SECRET_KEY
     GCP_ACCESS_KEY
     GCP_SECRET_KEY
-deps =
-    juju==2.9.11 # juju 3.0 has issues with retrieving action results and deploying charms
-    pytest
-    pytest-operator
-    psycopg2-binary
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m backup_tests
+    poetry install --with integration
+    poetry export -f requirements.txt -o requirements.txt
+    poetry run pytest -v --tb native --ignore={[vars]tst_path}unit --log-cli-level=INFO -s {posargs} --durations=0 -m backup_tests
 
 [testenv:charm-integration]
 description = Run charm integration tests
