--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ lightkube = "^0.12.0"
 lightkube-models = "^1.26.0.4"
 requests = "^2.28.2"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
+boto3 = "^1.26.69"
 
 [tool.poetry.group.fmt.dependencies]
 black = "^22.12.0"
