--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,13 +16,13 @@ python = "^3.8.10"
 ops = "^2.0"
 pgconnstr = "^1.0.1"
 tenacity = "^8.2.2"
-cryptography = "^39.0.1"
+cryptography = "^39.0.2"
 jsonschema = "^4.17.3"
 jinja2 = "^3.1.2"
 lightkube = "^0.12.0"
 lightkube-models = "^1.26.0.4"
 requests = "^2.28.2"
-boto3 = "^1.26.82"
+boto3 = "^1.26.84"
 # psycopg2 = "^2.9.5" # Injected in charmcraft.yaml
 
 [tool.poetry.group.fmt.dependencies]
@@ -40,7 +40,7 @@ codespell = "^2.2.2"
 
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "^7.0.5"}
-pytest = "^7.1.1"
+pytest = "^7.2.2"
 pytest-asyncio = "^0.20.3"
 
 [tool.poetry.group.integration.dependencies]
@@ -50,9 +50,15 @@ pytest-operator = "^0.23.0"
 juju = "^2" # Latest juju 2
 psycopg2 = {version = "^2.9.5", extras = ["binary"]}
 
+[tool.poetry.group.ha_charm]
+optional = true
+
 [tool.poetry.group.ha_charm.dependencies]
 ops = "^2.0"
-tenacity = "^8.2.1"
+tenacity = "^8.2.2"
+
+[tool.poetry.group.relation_charm]
+optional = true
 
 [tool.poetry.group.relation_charm.dependencies]
 ops = "^2.0"
